Add basic support for Java 9 (#125)
* Add support for Java 9 classloaders (but not modules)
* Add JVM args for Java 9
* Add Java 9 to travis matrix
* Add docs section for Java 9